Bug 256287 - [Cocoa] [Shape Detection] WebKit crashes on launch when on the base system
Summary: [Cocoa] [Shape Detection] WebKit crashes on launch when on the base system
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Canvas (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Myles C. Maxfield
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-03 17:56 PDT by Myles C. Maxfield
Modified: 2023-05-03 22:11 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Myles C. Maxfield 2023-05-03 17:56:02 PDT
[Cocoa] [Shape Detection] WebKit crashes on launch when on the base system
Comment 1 Radar WebKit Bug Importer 2023-05-03 17:56:24 PDT
<rdar://problem/108870362>
Comment 2 Myles C. Maxfield 2023-05-03 17:58:23 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13428
Comment 3 EWS 2023-05-03 22:11:14 PDT
Committed 263661@main (fcedcb75b10f): <https://commits.webkit.org/263661@main>

Reviewed commits have been landed. Closing PR #13428 and removing active labels.