[Cocoa] [Shape Detection] WebKit crashes on launch when on the base system https://bugs.webkit.org/show_bug.cgi?id=256287 rdar://108870362

Reviewed by Aditya Keerthi.

Turns out the base system doesn't have Vision.framework or CoreML.framework. We were crashing
because we were statically linking with CoreML.framework. This patch makes us use soft linking
instead.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/Modules/ShapeDetection/Implementation/Cocoa/VisionUtilities.mm:
(WebCore::ShapeDetection::configureRequestToUseCPUOrGPU):
* Source/WebCore/PAL/pal/cocoa/CoreMLSoftLink.h:
* Source/WebCore/PAL/pal/cocoa/CoreMLSoftLink.mm:
* Source/WebCore/PAL/pal/cocoa/VisionSoftLink.h:
* Source/WebCore/PAL/pal/cocoa/VisionSoftLink.mm:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/263661@main